--- a/config.yaml
+++ b/config.yaml
@@ -186,7 +186,7 @@ qiniu:
 redis:
     name: ""
     addr: 127.0.0.1:6379
-    password: ""
+    password: root
     db: 0
     useCluster: false
     clusterAddrs:
@@ -225,7 +225,7 @@ system:
     iplimit-count: 15000
     iplimit-time: 3600
     use-multipoint: false
-    use-redis: false
+    use-redis: true
     use-mongo: false
     use-strict-auth: false
 tencent-cos:
